# ogf

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
demo/: README  demo.cpp  meson.build  window.cpp  window.hpp
ogf/: README  meson.build
ogf/backend/: README  client.cpp  client.hpp  driver.cpp  driver.hpp  font.cpp  font.hpp  meson.build  painter.cpp  painter.hpp
ogf/core/: README  application.cpp  application.hpp  meson.build
ogf/gl/: README  context.cpp  context.hpp  meson.build
ogf/gui/: README  box.cpp  box.hpp  button.cpp  button.hpp  canvas.cpp  canvas.hpp  label.cpp  label.hpp  layout.cpp  layout.hpp  meson.build  spacer.cpp  spacer.hpp  style.cpp  style.hpp  titlebar.cpp  titlebar.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
ogf/platform/: README  client.cpp  client.hpp  driver.cpp  driver.hpp  font.cpp  font.hpp  meson.build  painter.cpp  painter.hpp
ogf/primative/: README  color.cpp  color.hpp  meson.build  point.cpp  point.hpp  rect.cpp  rect.hpp  size.cpp  size.hpp
ogf/widget/: README  button.cpp  button.hpp  label.cpp  label.hpp  meson.build  window.cpp  window.hpp
ogf/win32/: README  client.cpp  client.hpp  driver.cpp  driver.hpp  meson.build
ogf/xcb/: README  client.cpp  client.hpp  driver.cpp  driver.hpp  font.cpp  font.hpp  meson.build  painter.cpp  painter.hpp
tests/: meson.build
tests/backend/: client.test.cpp  driver.test.cpp  meson.build  painter.test.cpp
tests/core/: application.test.cpp  meson.build
tests/gl/: context.test.cpp  meson.build
tests/gui/: box.test.cpp  button.test.cpp  canvas.test.cpp  label.test.cpp  layout.test.cpp  meson.build  spacer.test.cpp  style.test.cpp  titlebar.test.cpp  widget.test.cpp  window.test.cpp
tests/platform/: client.test.cpp  driver.test.cpp  meson.build  painter.test.cpp
tests/primative/: color.test.cpp  meson.build  point.test.cpp  rect.test.cpp  size.test.cpp
tests/widget/: button.test.cpp  label.test.cpp  meson.build  window.test.cpp
tests/win32/: client.test.cpp  driver.test.cpp  meson.build
tests/xcb/: client.test.cpp  driver.test.cpp  meson.build
